# financial-calculator

./: .gitignore  README.md  example_scenario.json  example_scenario.yaml  pyproject.toml  requirements.txt
financial-calculator/: LICENSE
financial_calculator/: __init__.py  __main__.py  base.py  bootstrap_persister.py  calculate.py  cli.py  engine.py  gbm.py  gbm_persister.py  models.py  monte_carlo.py  returns_data.py  scenario.py  scenario_io.py  scenario_json.py
financial_calculator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
historical_data/: 3month.csv  bond.csv  build_monthly_returns.py  extrapolate-prices.py  ftse100.csv  ftse250.csv  ishares.csv  master_history.csv  monthly_returns.csv  nikkei.csv  russell.csv  sp400.csv  sp500.csv
tests/: calculate.py  conftest.py  test_engine.py  test_monte_carlo.py  test_returns_data.py  test_scenario_json.py
