[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "financial-calculator"
version = "0.1.0"
description = "Local Monte Carlo retirement / runway calculator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["financial_calculator*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
